--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -114,11 +114,11 @@ Magni Olsen Kyrkjeeide: \url{https://orcid.org/0000-0002-7454-3652}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. The rate at which their offspring colonize surroundings varies within species, and the reasons for this variation are often unclear. To minimize the spread of so-called ``wildlings'' and the burden of conifer plantations on native ecosystems, managers need to know which ecosystems are most and least susceptible.
+  Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. To minimize the rate at which their offspring --- so-called ``wildlings'' --- colonize surroundings, and reduce the burden of conifer plantations on native ecosystems, managers need to know which ecosystems are most and least susceptible.
 \item
-  We compared how likely wildlings are to establish across a wide range of ecosystems, focusing on four groups of alien conifer species planted in Norway. We used data from detailed surveys around 82 plantation stands to model the relationship between ecosystem type and wildling abundance --- accounting for seed rain (estimated), climate, and other sources of variation between sites. We also tested whether differences in susceptibility between individual ecosystem types could be generalized based on broad, shared characteristics.
+  We compared how likely wildlings are to establish across a wide range of ecosystems, focusing on four groups of alien conifer species planted in Norway. We used data from detailed surveys around 82 plantation stands to model the relationship between ecosystem type and wildling abundance, accounting for seed rain (estimated), climate, and other sources of variation between sites. We also tested whether differences in susceptibility between individual ecosystem types could be generalized based on broad, shared characteristics.
 \item
-  We found that ecosystem susceptibility to wildling establishment (modeled as relative establishment likelihood) was poorly correlated with wildling density in surveys (abundance/area). Susceptibility generally varied as much or more than wildling density, with relative establishment likelihoods spanning several orders of magnitude between the most and least susceptible ecosystems for all species groups.
+  We found that ecosystem susceptibility to wildling establishment (modeled as relative establishment likelihood) was poorly correlated with wildling density in surveys (abundance/area). Susceptibility generally varied as much or more than wildling density, with relative establishment likelihoods spanning several orders of magnitude between the most and least susceptible ecosystems for every species group.
 \item
   The four groups of conifer species showed somewhat similar patterns of establishment likelihood across ecosystem types, with intensively farmed ecosystems repeatedly among the least susceptible. We found that ecosystems characterized by destabilizing disturbance tended to be most susceptible, but broad ecosystem characteristics did not clarify patterns of susceptibility much, neither within nor across species groups.
 \item
@@ -154,9 +154,9 @@ As a result, it encapsulates in its ecosystem types (hereafter: ``ecosystems'') 
 It also identifies broad similarities between ecosystems, which might be used to tease out generic trends in establishment likelihood.
 
 To estimate how likely wildlings are to establish in particular ecosystems based on their abundance around plantation stands, we must account for (1) seed dispersal, and (2) sources of variation in establishment beside ecosystem type.
-For example, low establishment likelihood in an ecosystem frequently located close to plantations can be masked by copious seed rain (Rouget \& Richardson, \protect\hyperlink{ref-rougetInferringProcessPattern2003}{2003}).
+For example, low establishment likelihood in an ecosystem frequently located close to plantations may be masked by copious seed rain (Rouget \& Richardson, \protect\hyperlink{ref-rougetInferringProcessPattern2003}{2003}).
 Likewise, an ecosystem may appear to promote establishment if it tends to co-occur with climatic conditions that support germination.
-Once estimated, unconfounded establishment likelihoods can be used to predict how susceptible the surroundings of an unobserved plantation are, based on ecosystem composition.
+Once estimated, unconfounded establishment likelihoods may be used to predict how susceptible the surroundings of an unobserved plantation are, based on ecosystem composition.
 
 Determining which ecosystems are most susceptible so that interventions can be prioritized objectively is among the most urgent objectives for invasion science (Pyšek et al., \protect\hyperlink{ref-pysekScientistsWarningInvasive2020}{2020}).
 Stands of wind-dispersed, alien conifers present a unique opportunity to assess ecosystem invasibility (to these species), because we can estimate ecosystem exposure (seed rain) directly, rather than by proxy (Catford et al., \protect\hyperlink{ref-catfordQuantifyingLevelsBiological2012}{2012}).
@@ -208,7 +208,7 @@ Details of all 82 stands are provided in the Appendix (table~\ref{tab:sites-tabl
 \subsection{Seed dispersal}\label{seed-dispersal}}
 
 To account for the influence of seed dispersal on wildling abundance, we needed estimates of the spatial distribution of seed rain within the 500x500~m plots.
-We considered all conspecific stands within a 1 km radius of the central stand to be potential seed sources, and used two models of seed dispersal to derive two different estimates of relative seed rain in space.
+We considered all conspecific stands within a 1 km radius of the central stand to be potential seed sources, and used two models of seed dispersal to derive different estimates of relative seed rain in space.
 Acknowledging the uncertainty involved in estimating seed dispersal, we explored one empirically-parameterized, isotropic model and one mechanistically-derived, anisotropic model.
 
 The first model was a static seed dispersal kernel with parameter estimates generalized from multiple data sets.
@@ -325,7 +325,7 @@ species group & Pearson & Spearman\\
 For all species, models using relative seed rain estimates from the WALD dispersal model predicted wildling abundance best (Appendix, table~\ref{tab:model-comparison-table}).
 Omitting seed rain altogether produced better model fits than using estimates from the empirical dispersal kernel.
 Site had a strong influence on wildling abundance for Sitka/Lutz spruce and lodgepole pine, such that site variation swamped much of the variation between ecosystems, for these species.
-The direct effects of climate on establishment likelihood --- not including its effect mediated by ecosystems --- varied by species and was strongest for larches (Appendix, tables~\ref{tab:Ps}-\ref{tab:Pc}).
+The direct effects of climate on establishment likelihood varied by species and was strongest for larches (Appendix, tables~\ref{tab:Ps}-\ref{tab:Pc}).
 The direct effects of elevation from the stand on wildling abundance (through seed rain) were comparatively modest and acted in different directions for different species.
 Stand age did not significantly affect wildling abundance in any species, except that older stands of Sitka/Lutz spruce had fewer wildling-free cells (structural zeros) than younger stands.
 
@@ -335,7 +335,7 @@ Stand age did not significantly affect wildling abundance in any species, except
 \begin{figure}
 \centering
 \includegraphics{/home/julien/Documents/dissertation/chapter3/conifer-plantation-spread/ms/figures/establishment/establishment.pdf}
-\caption{\label{fig:establishment}Relative densities (unfilled points) and relative establishment likelihoods (filled points) of four alien conifer species groups across ecosystem types, using `forest' as the reference type. Zero density is plotted at the lower limit of the x-axis. Estimates of relative establishment likelihood are shown with 95 \% confidence intervals. Grey points depict relative establishment likelihoods for individual sites in our data set. The order of ecosystem types along the y-axis is determined by a confidence-weighted mean of their percentile-ranked establishment likelihoods within species, such that types with consistently high establishment likelihood across species are at the top. Photos licensed CC BY 4.0 Rune Halvorsen.}
+\caption{\label{fig:establishment}Relative densities (unfilled points) and relative establishment likelihoods (filled points) of four alien conifer species groups across ecosystem types, using `forest' as the reference type. Zero density is plotted at the lower limit of the x-axis. Relative establishment likelihoods are shown with 95 \% confidence intervals. Grey points depict relative establishment likelihoods for individual sites in our data set. The order of ecosystem types along the y-axis is determined by a confidence-weighted mean of their percentile-ranked establishment likelihoods within species, such that types with consistently high establishment likelihood across species are at the top. Photos licensed CC BY 4.0 Rune Halvorsen.}
 \end{figure}
 
 \end{landscape}
@@ -373,7 +373,7 @@ However, the association between structuring process and establishment likelihoo
 \begin{figure}
 \centering
 \includegraphics{/home/julien/Documents/dissertation/chapter3/conifer-plantation-spread/ms/figures/establishment-hypotheses.pdf}
-\caption{\label{fig:establishment-hypotheses}Relative densities (unfilled points) and relative establishment likelihoods (filled points) of four alien conifer species groups among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom). Estimates of relative establishment likelihood are shown with 95 \% confidence intervals. The horizontal dotted lines mark the reference level for the scaling. Strata without wildlings and covering less than one hectare across all sites for that species are not displayed.}
+\caption{\label{fig:establishment-hypotheses}Relative densities (unfilled points) and relative establishment likelihoods (filled points) of four alien conifer species groups among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom). Relative establishment likelihoods are shown with 95 \% confidence intervals. The horizontal dotted lines indicate the reference strata.}
 \end{figure}
 
 \end{landscape}
@@ -391,11 +391,10 @@ The nonzero effects of hypothesized confounders (like seed rain, climate, and si
 Furthermore, variation in establishment likelihood was no smaller than variation in wildling densities, as might have been the case if confounding variables had amplified differences in ecosystem establishment.
 
 Because wildling abundance is the product of seed rain and establishment likelihood, we needed to estimate seed rain independently of our wildling data to model establishment likelihood properly.
-Otherwise variation in wildling abundance caused by differential establishment likelihood might be attributed to differential seed rain, or vice versa.
-By including relative seed rain as an offset in the model, we ensure that seed rain and establishment likelihood are not conflated, at the cost of assuming that our relative seed rain estimates are accurate.
+By including relative seed rain as an offset in the model, we ensured that seed rain and establishment likelihood were not conflated, at the cost of assuming that our relative seed rain estimates were accurate.
 Exploring the alternative, we found that if we included relative seed rain as a covariate rather than an offset that its coefficient was estimated near one, and that estimated relative establishment likelihoods remained mostly unchanged (Appendix, fig.~\ref{fig:establishment-sensitivity}).
 This result is consistent with the assumption that our WALD-derived estimates of relative seed rain capture true differences in seed rain.
-Although survivorship bias in our data prevents rigorous comparison of seed dispersal models, the superior fits of models with WALD-derived seed rain offsets compared to models with empirically-derived seed rain offsets also suggests that the WALD model described seed dispersal well.
+Although survivorship bias in our data prevents rigorous comparison of seed dispersal models, the superior fits of models with WALD-derived seed rain offsets compared to models with empirically-derived seed rain offsets also supports the WALD model estimates.
 Lastly, the mechanistic nature of the WALD model makes us more confident in its estimates across species and sites than we would be in a purely phenomenological model (Bullock et al., \protect\hyperlink{ref-bullockAllDispersalFunctions2018}{2018}).
 Nevertheless, that seed rain was was modeled and not measured is a limitation of our method, and it makes the establishment likelihoods we estimate less certain.
 For example, changes in the distribution of seed rain as a stand matures were not accounted for, nor was secondary seed dispersal from the few reproductive wildlings we observed.
@@ -404,17 +403,16 @@ The inconsistent effects of elevation from the stand on wildling abundance sugge
 In any case, there is no rule of thumb for management that wildlings tend to move up or down slopes.
 Similarly, the weak effects of stand age on wildling abundance suggests that wildlings do not accumulate over the lifetime of the stand, or at least that this accumulation tends to be weak and/or non-linear.
 
-We reiterate that our models do not estimate climate's total causal effect on wildling abundance, because they set aside its influence on ecosystems (Westreich \& Greenland, \protect\hyperlink{ref-westreichTableFallacyPresenting2013}{2013}).
+Our models do not estimate climate's total causal effect on wildling abundance, because they set aside its influence on ecosystems (Westreich \& Greenland, \protect\hyperlink{ref-westreichTableFallacyPresenting2013}{2013}).
 Therefore, we interpret the estimated climatic effects with respect to physiological constraints within a given ecosystem.
 The negligible effect of precipitation and weakly positive effect of mean annual temperature on Sitka/Lutz spruce wildling abundance is consistent with Sitka spruce's wide climatic tolerance relative to climatic variation in Norway and its oceanic affinity (Peterson et al., \protect\hyperlink{ref-petersonEcologyManagementSitka1997}{1997}).
 For Norway spruce, our results support a previous finding that seedling recruitment increases towards the wetter end of Norwegian climate (Tingstad et al., \protect\hyperlink{ref-tingstadTemperaturePrecipitationBiotic2015}{2015}), although most of our sites circumscribed a narrow part of that range.
-Warm and wet conditions seem to suppress larch establishment in Norway, which can be taken into consideration when managing these plantations.
+Warm and wet conditions seem to suppress larch establishment in Norway, which may be taken into consideration when managing these plantations.
 
 A curious feature of our results that needs more research is the large amount of unexplained variation in Sitka/Lutz spruce and lodgepole pine wildling abundance between sites.
 This means that our ability to predict the spread of these species at a specific site, relative to other sites, is limited (even if the site's ecosystem composition is known).
 Nevertheless, ecosystem comparisons can and should guide management.
-Bianchi et al.~(\protect\hyperlink{ref-bianchiMethodsPredictingSitka2019}{2019}) struggled to predict regeneration density within Sitka spruce plantations from bare ground cover, moss cover, stand age, and stand density.
-The inadequacy of stand density as a predictor in this context suggests that the unexplained site-level variation in our models was not caused by differences in the densities of seed sources (which we assumed to be constant).
+Bianchi et al.~(\protect\hyperlink{ref-bianchiMethodsPredictingSitka2019}{2019}) struggled to predict regeneration density within Sitka spruce plantations from stand density (among other predictors), which suggests that the unexplained site-level variation in our models was not caused by our assumption of constant seed source density.
 Alternative explanations could include: (1) property owners removing wildlings, (2) disturbance legacies not captured in the delineation of ecosystem types (especially in grazing pressure; Miller et al., \protect\hyperlink{ref-millerHowDisturbanceHistory2021}{2021}), or (3) differing demographic characteristics among plantations (especially in cone production; Taylor et al., \protect\hyperlink{ref-taylorDriversPlantInvasion2016}{2016}), potentially as a result of provenance.
 Ecological differences between Lutz and Sitka spruce might also explain some of the site variation in that case.
 
@@ -423,7 +421,7 @@ Ecological differences between Lutz and Sitka spruce might also explain some of 
 
 In a large database of vegetation plots across Europe, Chytrý et al.(\protect\hyperlink{ref-chytryHabitatInvasionsAlien2008}{2008}) found that alien plants as a group are consistently found at low rates in mires and heaths, and high rates in arable, man-made, and coastal ecosystems.
 The conifer species we examined do not conform closely to these broader trends in ecosystem invasibility, showing relatively high rates of establishment in heaths and very low rates of establishment in arable ecosystems.
-To the extent that there are similarities across these species, they appear to establish more easily in ecosystems infrequently hit by intense disturbances (e.g.~rock fall in ``bare talus slope'' or fire in ``coastal heath'') than in ecosystems frequently experiencing less intense disturbances (e.g.~erosion in ``sand dunes'' or flooding in ``semi-natural wet meadow'')
+To the extent that there are similarities across these four species, they appear to establish more easily in ecosystems infrequently hit by intense disturbances (e.g.~rock fall in ``bare talus slope'') than in ecosystems frequently experiencing less intense disturbances (e.g.~flooding in ``semi-natural wet meadow'').
 
 Of the species in this study, lodgepole pine's establishment is best studied, and our results are consistent with this literature.
 ``Bare rock'' harbors very few competitors and showed highest lodgepole pine establishment of all ecosystems (Despain, \protect\hyperlink{ref-despainDispersalEcologyLodgepole2001}{2001}), and ecosystems with canopy cover generally showed low establishment (Langdon et al., \protect\hyperlink{ref-langdonPinusContortaInvasion2010}{2010}; Taylor et al., \protect\hyperlink{ref-taylorDriversPlantInvasion2016}{2016}).
@@ -435,7 +433,7 @@ Furthermore, ecosystems that would seem inhospitable based on their overall char
 From this perspective, our estimates of establishment likelihood measure the density of suitable microsites in a given ecosystem.
 
 The breadth in establishment likelihood suggests that differences between ecosystems deserve careful consideration when managing wildling spread.
-This knowledge can be applied in at least two ways.
+This knowledge may be applied in at least two ways.
 First, as a preventative measure, we recommend siting new stands where surrounded by high proportions of ecosystems with low establishment likelihood.
 In particular, ``arable fields'' repress wildling establishment for all species and are common near existing stands, so picking sites hemmed in by this kind of agricultural land should be both effective and feasible.
 This would probably reduce the rate of wildling establishment by orders of magnitude, even if long distance dispersal might preclude complete containment (Albert et al., \protect\hyperlink{ref-albertLanduseChangeSubalpine2008}{2008}).
@@ -770,7 +768,7 @@ species group & seed dispersal estimate & AIC & dAIC & df\\
 \cmidrule{1-5}
  & WALD & 10057.588 & 0.0000 & 21\\
 
-\multirow{-2}{*}{\raggedright\arraybackslash Larix} & Exponential Power & 27310.048 & 17252.4596 & 21\\
+\multirow{-2}{*}{\raggedright\arraybackslash Larix spp.} & Exponential Power & 27310.048 & 17252.4596 & 21\\
 \cmidrule{1-5}
  & WALD & 3319.143 & 0.0000 & 17\\
 
