--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -186,9 +186,7 @@ We selected stands using aerial imagery, aiming for those isolated from conspeci
 We collected field data for each stand in one of six field campaigns during the period 2016-2019 (reported in Olsen et al., \protect\hyperlink{ref-olsenKartleggingAvKortdistansespredning2016}{2016}, \protect\hyperlink{ref-olsenKartleggingAvKortdistansespredning2019}{2019}; Appelgren, \protect\hyperlink{ref-appelgrenKartleggingAvKortdistansespredning2018}{2018}; Appelgren \& Torvik, \protect\hyperlink{ref-appelgrenKartleggingAvKortdistansespredning2017}{2017}; Kyrkjeeide et al., \protect\hyperlink{ref-kyrkjeeideKartleggingAvKortdistansespredning2017}{2017}; Sandven et al., \protect\hyperlink{ref-sandvenKartleggingAvKortdistansespredning2019}{2019}).
 
 \begin{figure}
-\centering
-\includegraphics{figures/sites-map.pdf}
-\caption{\label{fig:sites-map}Locations of the 82 plantation stands in the sample.}
+\includegraphics[width=1\linewidth]{figures/sites-map} \caption{Locations of the 82 plantation stands in the sample.}\label{fig:sites-map}
 \end{figure}
 
 Within a 2x2 km plot centered on the stand of interest, we mapped all conspecific stands (except in the 2016 field campaign).
@@ -246,9 +244,7 @@ In the DAG, the unmeasured, proximate causes of wildling abundance --- total see
 We included an effect of elevation from the stand on seed rain because neither of our models of seed dispersal account for uneven terrain.
 
 \begin{figure}
-\centering
-\includegraphics{/home/julien/Documents/dissertation/chapter3/conifer-plantation-spread/ms/figures/dagitty-model.pdf}
-\caption{\label{fig:DAG}A directed acyclic graph showing the causal relationships motivating our statistical model of ecosystems' effects on wildling abundance. Red variables causally affect both the ecosystem type and wildling abundance, blue variables causally affect only wildling abundance, and grey variables are unobserved. Green arrows show the causal pathway of interest.}
+\includegraphics[width=0.9\linewidth]{/home/julien/Documents/dissertation/chapter3/conifer-plantation-spread/ms/figures/dagitty-model} \caption{A directed acyclic graph showing the causal relationships motivating our statistical model of ecosystems' effects on wildling abundance. Red variables causally affect both the ecosystem type and wildling abundance, blue variables causally affect only wildling abundance, and grey variables are unobserved. Green arrows show the causal pathway of interest.}\label{fig:DAG}
 \end{figure}
 
 For all species, wildling abundance showed a high frequency of zeros that was underestimated by the best fitting negative binomial distribution.
@@ -322,13 +318,6 @@ species group & Pearson & Spearman\\
 \end{tabular}
 \end{table}
 
-For all species, models using relative seed rain estimates from the WALD dispersal model predicted wildling abundance best (Appendix, table~\ref{tab:model-comparison-table}).
-Omitting seed rain altogether produced better model fits than using estimates from the empirical dispersal kernel.
-Site had a strong influence on wildling abundance for Sitka/Lutz spruce and lodgepole pine, such that site variation swamped much of the variation between ecosystems, for these species.
-The direct effects of climate on establishment likelihood varied by species and was strongest for larches (Appendix, tables~\ref{tab:Ps}-\ref{tab:Pc}).
-The direct effects of elevation from the stand on wildling abundance (through seed rain) were comparatively modest and acted in different directions for different species.
-Stand age did not significantly affect wildling abundance in any species, except that older stands of Sitka/Lutz spruce had fewer wildling-free cells (structural zeros) than younger stands.
-
 \newpage
 \begin{landscape}
 
@@ -340,6 +329,13 @@ Stand age did not significantly affect wildling abundance in any species, except
 
 \end{landscape}
 \newpage
+
+For all species, models using relative seed rain estimates from the WALD dispersal model predicted wildling abundance best (Appendix, table~\ref{tab:model-comparison-table}).
+Omitting seed rain altogether produced better model fits than using estimates from the empirical dispersal kernel.
+Site had a strong influence on wildling abundance for Sitka/Lutz spruce and lodgepole pine, such that site variation swamped much of the variation between ecosystems, for these species.
+The direct effects of climate on establishment likelihood varied by species and was strongest for larches (Appendix, tables~\ref{tab:Ps}-\ref{tab:Pc}).
+The direct effects of elevation from the stand on wildling abundance (through seed rain) were comparatively modest and acted in different directions for different species.
+Stand age did not significantly affect wildling abundance in any species, except that older stands of Sitka/Lutz spruce had fewer wildling-free cells (structural zeros) than younger stands.
 
 Among ecosystems with at least one wildling, estimated establishment likelihoods varied by 3--5 orders of magnitude for the different species.
 Patterns of relative establishment likelihood were modestly similar between species, with positive rank correlations in four of six species pairs (table~\ref{tab:species-correlation-table}).
@@ -401,7 +397,7 @@ For example, changes in the distribution of seed rain as a stand matures were no
 
 The inconsistent effects of elevation from the stand on wildling abundance suggests that terrain does not affect seed dispersal much or that vertical distance alone misses its effect.
 In any case, there is no rule of thumb for management that wildlings tend to move up or down slopes.
-Similarly, the weak effects of stand age on wildling abundance suggests that wildlings do not accumulate over the lifetime of the stand, or at least that this accumulation tends to be weak and/or non-linear.
+Similarly, the weak and inconsistent effects of stand age on wildling abundance suggests that wildlings accumulate sporadically, and that other site characteristics tend to outweigh the effect of age.
 
 Our models do not estimate climate's total causal effect on wildling abundance, because they set aside its influence on ecosystems (Westreich \& Greenland, \protect\hyperlink{ref-westreichTableFallacyPresenting2013}{2013}).
 Therefore, we interpret the estimated climatic effects with respect to physiological constraints within a given ecosystem.
@@ -508,6 +504,8 @@ In each sector we estimated mean vegetation height based on the composition of m
 Simultaneously, we randomly sampled 100 wind velocities in the direction of the sector during the species' dispersal season.
 The 100 resulting WALD kernels produced the seed probability density in the sector, and individual sectors were weighed by the frequency of corresponding wind directions (again, during the species' dispersal season).
 The wind data were obtained either from the nearest weather station (MET Norway), a 2.5 km resolution interpolated hindcast covering southern Norway (Haakenstad \& Haugen, \protect\hyperlink{ref-haakenstad15yearHighResolution2017}{2017}), or a 10 km resolution hindcast covering all of Norway (Haakenstad et al., \protect\hyperlink{ref-haakenstadNORA10EIRevisedRegional2020}{2020}; Reistad et al., \protect\hyperlink{ref-reistadHighresolutionHindcastWind2011}{2011}). We used weather station data if the station was less than 2.5 or 10 km away (depending on hindcast coverage), or else the highest resolution hindcast.
+
+\newpage
 
 \begin{ThreePartTable}
 \begin{TableNotes}
@@ -732,15 +730,15 @@ artificial wetland & V13 & wetland & strong anthropogenic disturbance & 0.0\\*
 \item \textit{References: } 
 \item Heath, Joel P., and Peter Borowski. 2013. “Quantifying Proportional Variability.” PLoS ONE 8 (12): e84074. https://doi.org/10.1371/journal.pone.0084074.
 \end{TableNotes}
-\begin{longtable}[t]{lrr}
+\begin{longtable}[t]{>{}lrr}
 \caption{\label{tab:dispersion-table}Proportional variability in wildling densities among ecosystems compared to proportional variability in establishment likelihoods among ecosystems.}\\
 \toprule
   & density & establishment likelihood\\
 \midrule
-Picea sitchensis / lutzii & 0.635 & 0.735\\
-Picea abies & 0.755 & 0.755\\
-Larix spp. & 0.776 & 0.721\\
-Pinus contorta & 0.753 & 0.824\\
+\em{Picea sitchensis / lutzii} & 0.635 & 0.735\\
+\em{Picea abies} & 0.755 & 0.755\\
+\em{Larix spp.} & 0.776 & 0.721\\
+\em{Pinus contorta} & 0.753 & 0.824\\
 \bottomrule
 \insertTableNotes
 \end{longtable}
@@ -750,7 +748,7 @@ Pinus contorta & 0.753 & 0.824\\
 
 \caption{\label{tab:model-comparison-table}Comparison of models with different seed dispersal estimates}
 \centering
-\begin{tabular}[t]{llrrr}
+\begin{tabular}[t]{>{}llrrr}
 \toprule
 species group & seed dispersal estimate & AIC & dAIC & df\\
 \midrule
@@ -758,23 +756,23 @@ species group & seed dispersal estimate & AIC & dAIC & df\\
 
  & Exponential Power & 128861.239 & 76893.9779 & 38\\
 
-\multirow{-3}{*}{\raggedright\arraybackslash Picea sitchensis / lutzii} & none & 54477.712 & 2510.4515 & 38\\
+\multirow{-3}{*}{\raggedright\arraybackslash \em{Picea sitchensis / lutzii}} & none & 54477.712 & 2510.4515 & 38\\
 \cmidrule{1-5}
  & WALD & 9680.586 & 0.0000 & 26\\
 
  & Exponential Power & 25316.450 & 15635.8645 & 26\\
 
-\multirow{-3}{*}{\raggedright\arraybackslash Picea abies} & none & 9781.127 & 100.5414 & 26\\
+\multirow{-3}{*}{\raggedright\arraybackslash \em{Picea abies}} & none & 9781.127 & 100.5414 & 26\\
 \cmidrule{1-5}
  & WALD & 10057.588 & 0.0000 & 21\\
 
-\multirow{-2}{*}{\raggedright\arraybackslash Larix spp.} & Exponential Power & 27310.048 & 17252.4596 & 21\\
+\multirow{-2}{*}{\raggedright\arraybackslash \em{Larix spp.}} & Exponential Power & 27310.048 & 17252.4596 & 21\\
 \cmidrule{1-5}
  & WALD & 3319.143 & 0.0000 & 17\\
 
  & Exponential Power & NA & NA & 17\\
 
-\multirow{-3}{*}{\raggedright\arraybackslash Pinus contorta} & none & 3372.102 & 52.9581 & 17\\
+\multirow{-3}{*}{\raggedright\arraybackslash \em{Pinus contorta}} & none & 3372.102 & 52.9581 & 17\\
 \bottomrule
 \end{tabular}
 \end{table}
