--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment},
-  pdfauthor={Julien Vollering; Siri Lie Olsen; Olav Skarpaas; Leif Appelgren; Magni Olsen Kyrkjeeide; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus},
+  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen; Olav Skarpaas; Leif Appelgren; Magni Olsen Kyrkjeeide; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus3},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -86,16 +86,20 @@
 \usepackage{xcolor}
 
 \title{Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment}
-\author{Julien Vollering\footnote{\href{mailto:julienvollering@gmail.com}{\nolinkurl{julienvollering@gmail.com}}} \and Siri Lie Olsen \and Olav Skarpaas \and Leif Appelgren \and Magni Olsen Kyrkjeeide \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus}
+\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen \and Olav Skarpaas \and Leif Appelgren \and Magni Olsen Kyrkjeeide \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{3}}
 \date{}
 
 \begin{document}
 \maketitle
 
-{
-\setcounter{tocdepth}{2}
-\tableofcontents
-}
+¹Department of Environmental Sciences, Western Norway University of Applied Sciences, Sogndal, Norway
+
+²Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
+
+³NORSKOG, Oslo, Norway
+
+*Corresponding author: \href{mailto:julienvollering@gmail.com}{\nolinkurl{julienvollering@gmail.com}}
+
 \hypertarget{orcids}{%
 \section{ORCIDs}\label{orcids}}
 
@@ -481,7 +485,7 @@ JV, SLO, and OSk conceived the ideas and designed methodology; SLO, LA, MOK, AO,
 \hypertarget{acknowledgements}{%
 \section{Acknowledgements}\label{acknowledgements}}
 
-We thank Honorata Gajda, Knut Børge Strøm, Heidi Elin Myklebost, Jon Hagelin, Vigdis Frivoll, Sina Thu Randulff, Roy Mangersnes, Bjarne Homnes Oddane, Rune Søyland, Solbjørg Engen Torvik, Toralf Tysse, Craig Jackson, Miene-Marie Gastinger, Ola Westby Aamodt, and Anders Ringstad for their help in collecting and/or collating the field data. Field work was financed by the Norwegian Environment Agency (contracts \#15040036, \#17070025, \#19087471\ldots).
+We thank Honorata Gajda, Knut Børge Strøm, Heidi Elin Myklebost, Jon Hagelin, Vigdis Frivoll, Sina Thu Randulff, Roy Mangersnes, Bjarne Homnes Oddane, Rune Søyland, Solbjørg Engen Torvik, Toralf Tysse, Craig Jackson, Miene-Marie Gastinger, Ola Westby Aamodt, and Anders Ringstad for their help in collecting and/or collating the field data. Field work was financed by the Norwegian Environment Agency (contracts \#15040036, \#17070025, \#19087470, \#19087471\ldots).
 
 \newpage
 
