--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -37,7 +37,7 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment},
-  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen; Olav Skarpaas; Leif Appelgren; Magni Olsen Kyrkjeeide; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus3},
+  pdfauthor={Julien Vollering1,2*; Siri Lie Olsen; Olav Skarpaas; Leif Appelgren; Magni Olsen Kyrkjeeide3; Anders Often; Jakob Sandven; Odd Stabbetorp; Øyvind Sørhuus4},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -86,17 +86,19 @@
 \usepackage{xcolor}
 
 \title{Accounting for seed rain and other confounders reveals which ecosystems are most susceptible to alien conifer establishment}
-\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen \and Olav Skarpaas \and Leif Appelgren \and Magni Olsen Kyrkjeeide \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{3}}
+\author{Julien Vollering\textsuperscript{1,2}* \and Siri Lie Olsen \and Olav Skarpaas \and Leif Appelgren \and Magni Olsen Kyrkjeeide\textsuperscript{3} \and Anders Often \and Jakob Sandven \and Odd Stabbetorp \and Øyvind Sørhuus\textsuperscript{4}}
 \date{}
 
 \begin{document}
 \maketitle
 
-¹Department of Environmental Sciences, Western Norway University of Applied Sciences, Sogndal, Norway
+\textsuperscript{1}Department of Environmental Sciences, Western Norway University of Applied Sciences, Sogndal, Norway
 
-²Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
+\textsuperscript{2}Department of Research and Collections, Natural History Museum, University of Oslo, Oslo, Norway
 
-³NORSKOG, Oslo, Norway
+\textsuperscript{3}Norwegian Institute for Nature Research, Trondheim, Norway
+
+\textsuperscript{4}NORSKOG, Oslo, Norway
 
 *Corresponding author: \href{mailto:julienvollering@gmail.com}{\nolinkurl{julienvollering@gmail.com}}
 
